--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	display: block;
 	margin: 1em;
 	height:200px;
-	background: url(obj/img/intro/dove.png) no-repeat center center;
+	background: url(obji/img/intro/dove.png) no-repeat center center;
 	background-size:contain;
 }
 .km-ios #listview-templates .head {
@@ -58,7 +58,7 @@
 	#listview-templates .km-content
 {
    // background-color: #f0f0f0;
-	background: url(obj/img/intro/nubes.jpg);
+	background: url(obji/img/intro/nubes.jpg);
 	background-position:center;
 	background-position:top;
 	background-origin:border-box;
