--- a/oraciones.html
+++ b/oraciones.html
@@ -51,16 +51,16 @@
 
 <script>
     var groupedData = [
-        { name: "Ave María", url: "obj/img/oraciones/1a.jpg", letter: "Cotidianas" },
-        { name: "Padre Nuestro", url: "obj/img/oraciones/0a.jpg", letter: "Cotidianas" },
+        { name: "Ave María", url: "obji/img/oraciones/1a.jpg", letter: "Cotidianas" },
+        { name: "Padre Nuestro", url: "obji/img/oraciones/0a.jpg", letter: "Cotidianas" },
 		
-        { name: "Consagración al Corazón de Jesús", url: "obj/img/oraciones/2a.jpg", letter: "C" },
+        { name: "Consagración al Corazón de Jesús", url: "obji/img/oraciones/2a.jpg", letter: "C" },
 		
-        { name: "Credo", url: "obj/img/oraciones/3a.jpg", letter: "C" },
+        { name: "Credo", url: "obji/img/oraciones/3a.jpg", letter: "C" },
 		
-        { name: "Yo Pecador", url: "obj/img/oraciones/4a.jpg", letter: "Confesión" },
+        { name: "Yo Pecador", url: "obji/img/oraciones/4a.jpg", letter: "Confesión" },
 		
-        { name: "Acto de contricción", url: "obj/img/oraciones/5a.jpg", letter: "Confesión" }
+        { name: "Acto de contricción", url: "obji/img/oraciones/5a.jpg", letter: "Confesión" }
         
     ];
 
@@ -116,7 +116,7 @@
 	display: block;
 	margin: 1em;
 	height:200px;
-	background: url(obj/img/intro/dove.png) no-repeat center center;
+	background: url(obji/img/intro/dove.png) no-repeat center center;
 	background-size:contain;
 }
 .km-ios #listview-templates .head {
@@ -129,7 +129,7 @@
 	#listview-templates .km-content
 {
    // background-color: #f0f0f0;
-	background: url(obj/img/intro/nubes.jpg);
+	background: url(obji/img/intro/nubes.jpg);
 	background-position:center;
 	background-position:top;
 	background-origin:border-box;
