--- a/oraciones.html
+++ b/oraciones.html
@@ -15,7 +15,7 @@
     
    <header data-role="header">
         <div data-role="navbar">
-        <a  href="pricipal.html" data-rel="external" id="back-button" class="nav-button" data-align="left" data-role="backbutton">Regresar</a>
+        <a  href="index.html" data-rel="external" id="back-button" class="nav-button" data-align="left" data-role="backbutton">Regresar</a>
             
             <span data-role="view-title">Contacts</span>
         </div>
